# CatchingSegfaults

./: CMakeLists.txt  library.c  library.cpp  library.h
CMake/Mathematica/: FindMathematica.cmake
